--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/hill0ne/ins-site/issues"
   },
-  "homepage": "https://github.com/hill0ne/ins-site#readme"
+  "homepage": "https://github.com/hill0ne/ins-site"
 }
